Multi language index building and search